--- a/afleveringen.html
+++ b/afleveringen.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foute Pixels</title>
+    <title>Afleveringen</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap" rel="stylesheet">
 
@@ -156,3 +156,4 @@
 
 </body>
 </html>
+
