--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="nl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,60 +11,62 @@
 
 
 </head>
+
 <body>
 
-<header>
-    <nav>
-        <ul>
-            <li><img src="images/logo.png" alt="Logo van Foute Pixels"></li>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="afleveringen.html">Afleveringen</a></li>
-            <li><a href="over-ons.html">Over ons</a></li>
-        </ul>
-    </nav>
-</header>
+    <header>
+        <nav>
+            <ul>
+                <li><img src="images/logo.png" alt="Logo van Foute Pixels"></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="afleveringen.html">Afleveringen</a></li>
+                <li><a href="over-ons.html">Over ons</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<main>
-    <h1>Foute Pixels</h1>
+    <main>
+        <h1>Foute Pixels</h1>
 
-    <article>
-        <h2>Welkom bij Foute Pixels</h2>
-        <p>
-            Hoe herken je een catfish? Waarom zeggen mensen gemenere dingen op het internet? Wat kan ik doen om niet gescamd te worden? 
-            Dit zijn allemaal vragen waar wij (Devin, Sarah en Nienke) antwoord op gaan geven. 
-            Wekelijks bespreken we steeds een verschillend onderwerp om je bewust te maken van de gevaren, zodat jij de volgende keer een verdacht mailtje kan herkennen of weet hoe je omgaat met cyberpesten.
-        </p>
-        <p>
-            Pak een kop koffie (of energiedrank) en luister mee terwijl we het wereldwijde web een beetje veiliger proberen te maken!
-        </p>
-        <p><strong>Beluister onze podcast</strong> op deze website, Spotify of de app Podcasts!</p>
+        <article>
+            <h2>Welkom bij Foute Pixels</h2>
+            <p>
+                Hoe herken je een catfish? Waarom zeggen mensen gemenere dingen op het internet? Wat kan ik doen om niet
+                gescamd te worden?
+                Dit zijn allemaal vragen waar wij (Devin, Sarah en Nienke) antwoord op gaan geven.
+                Wekelijks bespreken we steeds een verschillend onderwerp om je bewust te maken van de gevaren, zodat jij
+                de volgende keer een verdacht mailtje kan herkennen of weet hoe je omgaat met cyberpesten.
+                <br><br>
+                Pak een kop koffie (of energiedrank) en luister mee terwijl we het wereldwijde web een beetje veiliger
+                proberen te maken!
+            </p>
+            <p><strong>Beluister onze podcast</strong> op deze website, Spotify of de app Podcasts!</p>
 
-        <iframe 
-            width="560" 
-            height="315" 
-            src="https://www.youtube.com/embed/As7Sm_K50gc?si=9hgQ0lLvn_5D6HXe" 
-            title="YouTube video player" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-            referrerpolicy="strict-origin-when-cross-origin" 
-            allowfullscreen>
-        </iframe>
-    </article>
-</main>
+            <!-- de strong tag geeft extra nadruk aan de tekst om te laten zien dat het belangrijk is -->
 
-<footer>
-    <article>
-        <h3>Contact ons</h3>
-        <p>Email: FoutePixels@Podcast.com</p>
-        <p>Telefoon: +31 612345678</p>
-        <p>Adres: 123 Game straat, Amsterdam, Nederland</p>
-    </article>
-    <article>
-        <h3>Volg ons</h3>
-        <p><a href="https://facebook.com">Facebook</a></p>
-        <p><a href="https://twitter.com">Twitter</a></p>
-        <p><a href="https://instagram.com">Instagram</a></p>
-    </article>
-</footer>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/As7Sm_K50gc?si=9hgQ0lLvn_5D6HXe"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+            </iframe>
+        </article>
+    </main>
+
+    <footer>
+        <article>
+            <h3>Contact ons</h3>
+            <p>Email: FoutePixels@Podcast.com</p>
+            <p>Telefoon: +31 612345678</p>
+            <p>Adres: 123 Game straat, Amsterdam, Nederland</p>
+        </article>
+        <article>
+            <h3>Volg ons</h3>
+            <p><a href="https://facebook.com">Facebook</a></p>
+            <p><a href="https://twitter.com">Twitter</a></p>
+            <p><a href="https://instagram.com">Instagram</a></p>
+        </article>
+    </footer>
 
 </body>
+
 </html>
