--- a/afleveringen.html
+++ b/afleveringen.html
@@ -35,16 +35,17 @@
                     <p>
                         Sinds social media bestaat vergelijken vooral meiden zichzelf met anderen. Dit maakt hun
                         onzeker.
-                        Wij gaan jou overtuigen dat jij leuk bent zoals je nu bent.
-                        <br><br>
-                        Doel van de aflevering:
+                        Wij gaan jou overtuigen dat jij leuk bent zoals je nu bent.</p>
+                    <p>Doel van de aflevering:
                         <strong>Luisteraar gaat zich bewust zijn van dat hij/zij er altijd beter uit kan zien, maar dat
                             dit
                             niet nodig is.
                             We willen dat de gebruiker genoegen neemt met hoe hij/zij er nu uitziet.</strong>
                     </p>
 
+
                     <a href="aflevering1.html">Begin met luisteren</a>
+
                 </li>
             </ul>
         </section>
@@ -62,15 +63,15 @@
                         In deze aflevering worden situaties belicht waarin pedofielen of andere engerds het internet
                         misbruiken om zich ongepast te gedragen.
                         De enige echte Chris Hansen zit erbij en vertelt over zijn jarenlange ervaring met creeps op het
-                        internet.
-                        <br><br>
-                        Doel van de aflevering:
+                        internet.</p>
+                    <p>Doel van de aflevering:
                         <strong>Na het luisteren is de luisteraar zich bewust van het feit dat het internet pedo's
                             toelaat om
                             hun (vieze) fantasie werkelijk te maken.
                             De luisteraar weet welke plekken hij/zij moet vermijden om minder last te hebben van
                             creeps.</strong>
                     </p>
+
 
                     <a href="aflevering2.html">Begin met luisteren</a>
                 </li>
@@ -88,11 +89,12 @@
                     <p>
                         Haatcomments, nepaccounts, roddelkanalen en wraakporno, allemaal voorbeelden van cyberpesten.
                         Thijs heeft in 2017 zelfmoord gepleegd als gevolg van cyberpesten. Hij deelt met ons zijn
-                        verhaal en een belangrijke boodschap.
-                        <br><br>
-                        Doel van de aflevering:
-                        <strong>Mensen bewust laten worden van de impact van cyberpesten, daarnaast advies geven over wat je
-                        zelf kan doen als je gepest wordt.</strong>
+                        verhaal en een belangrijke boodschap. </p>
+                    <p>Doel van de aflevering:
+                        <strong>Mensen bewust laten worden van de impact van cyberpesten, daarnaast advies geven over
+                            wat je
+                            zelf kan doen als je gepest wordt.</strong>
+
                     </p>
 
                     <a href="aflevering3.html">Begin met luisteren</a>
@@ -111,15 +113,14 @@
                 <li>
                     <p>In deze aflevering bespreken wij het ontstaan van AI, wat het precies is en wat voor invloed het
                         heeft in onze samenleving.
-                        <br><br>
                         Te gast is prof. dr. Claes de Vreese, hij is hoogleraar Artificial Intelligence and Society. Hij
                         bespreekt jullie vragen:
-                        Heb ik straks nog wel werk? Hoe zit het met mijn privacy?
-                        <br><br>
-                        Doel van de aflevering:
+                        Heb ik straks nog wel werk? Hoe zit het met mijn privacy? </p>
+                    <p> Doel van de aflevering:
                         <strong>Luisteraars informeren over het ontstaan van AI en wat het precies is, daarnaast
                             bewustwording
                             van de impact op de samenleving.</strong>
+
                     </p>
                     <a href="aflevering4.html">Begin met luisteren</a>
                 </li>
@@ -138,11 +139,11 @@
                     <p>
                         Het is makkelijker dan je denkt een virus te maken en per ongeluk te downloaden op je computer.
                         Dat betekent dat je goed moet opletten op wat een virus kan zijn. Elke link kan een gevaar
-                        meedragen.
-                        <br><br>
-                        Doel van de aflevering:
+                        meedragen.</p>
+                    <p>Doel van de aflevering:
                         <strong>De luisteraar weet wanneer een bestand veilig is en wanneer hij/zij zich zorgen moet
                             gaan maken.</strong>
+
                     </p>
                     <a href="aflevering5.html">Begin met luisteren</a>
                 </li>
@@ -161,19 +162,19 @@
                         Het internet is een broedplaats voor oplichters. Van je gemiddelde marktplaatsoplichter tot hele
                         callcenters in India.
                         In deze aflevering bespreken wij hoe je oplichters kan herkennen en gaan we diep in op de
-                        methodes
-                        die oplichters gebruiken.
-                        <br><br>
+                        methodes die oplichters gebruiken.
+
                         Bernard H. is ex-oplichter en vertelt over zijn methodes. Bernard is verantwoordelijk geweest
                         voor
                         een van de grootste investeringsscams in 2011 en heeft daarvoor ook in de gevangenis gezeten.
                         Karel is opgelicht door Bernard, wat een emotionele discussie veroorzaakt.
                         Jim Browning deelt ook zijn ervaring als scamhunter en legt uit hoe scammers werken.
-                        <br><br>
-                        Doel van de aflevering:
+                    </p>
+                    <p>Doel van de aflevering:
                         <strong>Luisteraar informeren over bekende methodes van oplichters om bewustwording te
                             vergroten.</strong>
                     </p>
+
                     <a href="aflevering6.html">Begin met luisteren</a>
                 </li>
             </ul>
